# FileSeeker

./: Cargo.toml  README.md  build.rs
src/: autostart.rs  config.rs  lib.rs  main.rs  tray_helper.rs  types.rs
src/cli/: mod.rs
src/engine/: database.rs  indexer.rs  mod.rs  searcher.rs  sorter.rs
src/etp/: mod.rs
src/file_list/: mod.rs
src/ftp/: mod.rs
src/gui/: app.rs  mod.rs  options_panel.rs  results_panel.rs  search_panel.rs
src/history/: mod.rs
src/http_server/: mod.rs
src/rename/: mod.rs
src/sdk/: mod.rs
src/tray/: mod.rs
src/watcher/: mod.rs
