[package]
name = "file-seeker"
version = "1.0.0"
edition = "2021"
description = "文件检索助手 - 快速文件名搜索工具"

[dependencies]
# GUI
eframe = "0.27"
egui = "0.27"
egui_extras = "0.27"

# File system
walkdir = "2"
jwalk = "0.8"
glob = "0.3"

# Search & regex
regex = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
toml = "0.8"

# HTTP server
tiny_http = "0.12"

# Networking
url = "2"

# Threading
crossbeam = "0.8"
rayon = "1"

# Time & date
chrono = { version = "0.4", features = ["serde"] }

# UUID for instance management
uuid = { version = "1", features = ["v4"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Config file
ini = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# File watching
notify = "6"
notify-debouncer-full = "0.3"

# File dialog for folder selection
rfd = "0.14"

# Compression (for database)
bzip2 = "0.4"

# Random
rand = "0.8"

# System tray icon (Windows) — using WinAPI directly
winapi = { version = "0.3", features = ["shellapi", "winuser", "libloaderapi"] }

# Windows registry for auto-start
winreg = "0.52"

# Crossbeam channels for tray communication
crossbeam-channel = "0.5"

# Once cell for lazy statics
once_cell = "1"

# ICO file handling for window icon
ico = "0.3"

[build-dependencies]
embed-resource = "2"

[features]
default = ["gui"]
gui = []
cli = []
http-server = []

[[bin]]
name = "file-seeker"
path = "src/main.rs"

[[bin]]
name = "tray-helper"
path = "src/tray_helper.rs"